chore: ghostty comment

--- a/ghostty.config
+++ b/ghostty.config
@@ -1,3 +1,5 @@
+# This file should be named ~/.config/ghostty/config
+
 cursor-style = block
 cursor-style-blink = false
 shell-integration-features = no-cursor
