fix: ghostty dark blue

--- a/ghostty.config
+++ b/ghostty.config
@@ -5,4 +5,5 @@ cursor-style-blink = false
 shell-integration-features = no-cursor
 theme = Builtin Dark
 font-feature = -calt
+palette = 4=#4fc1ff
 
