fix: ghostty notification on copy to clipboard

--- a/ghostty.config
+++ b/ghostty.config
@@ -6,4 +6,5 @@ shell-integration-features = no-cursor
 theme = Builtin Dark
 font-feature = -calt
 palette = 4=#4fc1ff
+app-notifications = no-clipboard-copy
 
