--- a/ghostty.config
+++ b/ghostty.config
@@ -7,4 +7,5 @@ theme = Builtin Dark
 font-feature = -calt
 palette = 4=#4fc1ff
 app-notifications = no-clipboard-copy
+command = fish --login --interactive
 
